# cpv-cql-driver

./: .gitmodules  .travis.yml  LICENSE  README.md  build-debug.sh  build-release.sh  build.sh  clean.sh  install-dependencies.sh
src/: CMakeLists.txt
src/Common/: BatchCommand.cpp  BatchQueryData.hpp  Command.cpp  CommonDefinitions.cpp  CqlBatchCommand.cpp  CqlCommand.cpp  CqlCommonDefinitions.cpp  CqlNodeCollection.cpp  CqlNodeCollectionImpl.cpp  CqlNodeCollectionImpl.hpp  CqlNodeConfiguration.cpp  CqlSessionConfiguration.cpp  Logger.cpp  MetricsData.cpp  MetricsData.hpp  NodeCollection.cpp  NodeCollectionImpl.cpp  NodeCollectionImpl.hpp  NodeConfiguration.cpp  ResultSet.cpp  ResultSetData.hpp  SessionConfiguration.cpp
src/Common/Extensions/: Exception.cpp
src/Common/Loggers/: ConsoleLogger.cpp  ConsoleLogger.hpp  NoopLogger.cpp  NoopLogger.hpp
src/Common/Utility/: UUIDUtils.cpp  UuidUtils.cpp
src/Design/: Version-01.txt
src/HighLevel/: CqlSession.cpp  CqlSessionConfiguration.cpp  CqlSessionConfigurationData.cpp  CqlSessionConfigurationData.hpp  CqlSessionConfigurationImpl.cpp  CqlSessionConfigurationImpl.hpp  CqlSessionFactory.cpp  CqlSessionFactoryImpl.cpp  CqlSessionFactoryImpl.hpp  CqlSessionImpl.cpp  CqlSessionImpl.hpp  Session.cpp  SessionData.hpp  SessionFactory.cpp  SessionFactoryImpl.cpp  SessionFactoryImpl.hpp  SessionImpl.cpp  SessionImpl.hpp
src/LowLevel/: Connection.cpp  Connection.hpp  ConnectionInfo.cpp  ConnectionInfo.hpp  ConnectionPool.cpp  ConnectionPool.hpp  ConnectionStream.cpp  ConnectionStream.hpp  CqlConnection.cpp  CqlConnection.hpp  CqlConnectionInfo.cpp  CqlConnectionInfo.hpp  CqlConnectionPool.cpp  CqlConnectionPool.hpp  CqlConnectionStream.cpp  CqlConnectionStream.hpp  CqlDefinitions.cpp  CqlDefinitions.hpp  CqlLowLevelDefinitions.cpp  CqlLowLevelDefinitions.hpp  CqlMessageBase.cpp  CqlMessageBase.hpp  CqlMessageHeader.cpp  CqlMessageHeader.hpp  LowLevelDefinitions.cpp  LowLevelDefinitions.hpp  MessageBase.cpp  MessageBase.hpp  MessageHeader.cpp  MessageHeader.hpp
src/LowLevel/Authenticators/: AllowAllAuthenticator.cpp  AllowAllAuthenticator.hpp  AuthenticatorBase.hpp  AuthenticatorFactory.cpp  AuthenticatorFactory.hpp  CqlAllowAllAuthenticator.cpp  CqlAllowAllAuthenticator.hpp  CqlAuthenticatorBase.hpp  CqlAuthenticatorFactory.cpp  CqlAuthenticatorFactory.hpp  CqlEmptyAuthenticator.cpp  CqlEmptyAuthenticator.hpp  CqlPasswordAuthenticator.cpp  CqlPasswordAuthenticator.hpp  PasswordAuthenticator.cpp  PasswordAuthenticator.hpp
src/LowLevel/Compressors/: CompressorBase.hpp  CompressorFactory.cpp  CompressorFactory.hpp  LZ4Compressor.cpp  LZ4Compressor.hpp
src/LowLevel/Connectors/: ConnectorBase.hpp  ConnectorFactory.cpp  ConnectorFactory.hpp  CqlConnectorBase.hpp  CqlConnectorFactory.cpp  CqlConnectorFactory.hpp  CqlSslConnector.cpp  CqlSslConnector.hpp  CqlTcpConnector.cpp  CqlTcpConnector.hpp  SSLConnector.cpp  SSLConnector.hpp  TCPConnector.cpp  TCPConnector.hpp
src/LowLevel/ProtocolTypes/: CqlProtocolBatchParameters.cpp  CqlProtocolBatchParameters.hpp  CqlProtocolBatchQuery.cpp  CqlProtocolBatchQuery.hpp  CqlProtocolBatchQueryList.hpp  CqlProtocolByte.cpp  CqlProtocolByte.hpp  CqlProtocolBytes.cpp  CqlProtocolBytes.hpp  CqlProtocolBytesMap.hpp  CqlProtocolColumnOption.cpp  CqlProtocolColumnOption.hpp  CqlProtocolColumnOptionList.hpp  CqlProtocolConsistency.hpp  CqlProtocolInet.hpp  CqlProtocolInetAddr.cpp  CqlProtocolInetAddr.hpp  CqlProtocolInt.cpp  CqlProtocolInt.hpp  CqlProtocolIntegerBase.hpp  CqlProtocolListBase.hpp  CqlProtocolLong.cpp  CqlProtocolLong.hpp  CqlProtocolLongString.cpp  CqlProtocolLongString.hpp  CqlProtocolMapBase.hpp  CqlProtocolPrepareParameters.cpp  CqlProtocolPrepareParameters.hpp  CqlProtocolQueryParameters.cpp  CqlProtocolQueryParameters.hpp  CqlProtocolResultColumn.cpp  CqlProtocolResultColumn.hpp  CqlProtocolResultMetadata.cpp  CqlProtocolResultMetadata.hpp  CqlProtocolResultPreparedMetadata.cpp  CqlProtocolResultPreparedMetadata.hpp  CqlProtocolResultRowsMetadata.cpp  CqlProtocolResultRowsMetadata.hpp  CqlProtocolShort.cpp  CqlProtocolShort.hpp  (+65 more)
src/LowLevel/RequestMessages/: AuthResponseMessage.cpp  AuthResponseMessage.hpp  BatchMessage.cpp  BatchMessage.hpp  CqlAuthResponseMessage.cpp  CqlAuthResponseMessage.hpp  CqlBatchMessage.cpp  CqlBatchMessage.hpp  CqlExecuteMessage.cpp  CqlExecuteMessage.hpp  CqlOptionsMessage.cpp  CqlOptionsMessage.hpp  CqlPrepareMessage.cpp  CqlPrepareMessage.hpp  CqlQueryMessage.cpp  CqlQueryMessage.hpp  CqlRegisterMessage.cpp  CqlRegisterMessage.hpp  CqlRequestMessageBase.hpp  CqlRequestMessageFactory.cpp  CqlRequestMessageFactory.hpp  CqlStartupMessage.cpp  CqlStartupMessage.hpp  ExecuteMessage.cpp  ExecuteMessage.hpp  OptionsMessage.cpp  OptionsMessage.hpp  PrepareMessage.cpp  PrepareMessage.hpp  QueryMessage.cpp  QueryMessage.hpp  RegisterMessage.cpp  RegisterMessage.hpp  RequestMessageBase.hpp  RequestMessageFactory.cpp  RequestMessageFactory.hpp  StartupMessage.cpp  StartupMessage.hpp
src/LowLevel/ResponseMessages/: AuthChallengeMessage.cpp  AuthChallengeMessage.hpp  AuthSuccessMessage.cpp  AuthSuccessMessage.hpp  AuthenticateMessage.cpp  AuthenticateMessage.hpp  CqlAuthChallengeMessage.cpp  CqlAuthChallengeMessage.hpp  CqlAuthSuccessMessage.cpp  CqlAuthSuccessMessage.hpp  CqlAuthenticateMessage.cpp  CqlAuthenticateMessage.hpp  CqlErrorMessage.cpp  CqlErrorMessage.hpp  CqlEventMessage.cpp  CqlEventMessage.hpp  CqlReadyMessage.cpp  CqlReadyMessage.hpp  CqlResponseMessageBase.hpp  CqlResponseMessageFactory.cpp  CqlResponseMessageFactory.hpp  CqlResultMessage.cpp  CqlResultMessage.hpp  CqlSupportedMessage.cpp  CqlSupportedMessage.hpp  ErrorMessage.cpp  ErrorMessage.hpp  EventMessage.cpp  EventMessage.hpp  ReadyMessage.cpp  ReadyMessage.hpp  ResponseMessageBase.hpp  ResponseMessageFactory.cpp  ResponseMessageFactory.hpp  (+4 more)
src/Utility/: CqlObject.hpp
tests/: CMakeLists.txt  Main.cpp  prepare.sh  run_tests.sh  tool_cppcheck.sh  travis_run_tests.sh
tests/Cases/: ExampleCase.cpp
tests/TestUtility/: AppTest.cpp  AppTest.hpp  GTestUtils.cpp  GTestUtils.hpp
(+400 files in other folders)
